--- a/week4/jl007_exercises.Rmd
+++ b/week4/jl007_exercises.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(error = TRUE, warning = FALSE)
 suppressPackageStartupMessages(library(tidyverse))
 suppressPackageStartupMessages(library(gapminder))
 suppressPackageStartupMessages(library(tsibble))
+suppressPackageStartupMessages(library(DT))
 ```
 
 
@@ -26,42 +27,42 @@ This worksheet contains exercises aimed for practice with `dplyr`.
 
 ```{r}
 gapminder %>% 
-  group_by(FILL_THIS_IN) %>% 
-  FILL_THIS_IN(min_life = min(lifeExp))
+  group_by(continent, year) %>% 
+  summarize(min_life = min(lifeExp),
+            country = country[lifeExp == min_life]) %>% 
+  arrange(min_life)
+#summ creating new column and using it later, so didnt need mutate. [] is defining within country
 ```
 
 2. Calculate the growth in population since the first year on record _for each country_ by rearranging the following lines, and filling in the `FILL_THIS_IN`. Here's another convenience function for you: `dplyr::first()`. 
 
 ```
-mutate(rel_growth = FILL_THIS_IN) %>% 
-arrange(FILL_THIS_IN) %>% 
-gapminder %>% 
-DT::datatable()
-group_by(country) %>% 
 ```
-
 ```{r}
-
+gapminder %>% 
+  group_by(country) %>% 
+  arrange(year) %>% #default is by ascending order
+  mutate(rel_growth = pop - first(pop)) %>%  
+  DT::datatable()
 ```
 
 
 3. Determine the country that experienced the sharpest 5-year drop in life expectancy, in each continent, sorted by the drop, by rearranging the following lines of code. Ensure there are no `NA`'s. Instead of using `lag()`, use the convenience function provided by the `tsibble` package, `tsibble::difference()`:
 
 ```
-drop_na() %>% 
-ungroup() %>% 
-arrange(year) %>% 
-filter(inc_life_exp == min(inc_life_exp)) %>% 
-gapminder %>% 
-mutate(inc_life_exp = FILL_THIS_IN) %>% 
-arrange(inc_life_exp) %>% 
-group_by(country) %>% 
-group_by(continent) %>% 
 knitr::kable()
 ```
 
 ```{r}
-
+gapminder %>% 
+  group_by(country) %>% 
+  arrange(year) %>%
+  mutate(inc_life_exp = difference(lifeExp)) %>% #difference fucntion is finding differnce between one row and the one before it, so like the lag() funtion..is NA for all 1952s then
+  drop_na() %>% #getting rid of all 1952 values
+  ungroup() %>% #ungrouping what we grouped
+  group_by(continent) %>% 
+  filter(inc_life_exp == min(inc_life_exp)) %>% 
+  arrange(inc_life_exp)
 ```
 
 
