--- a/week5/jl009.Rmd
+++ b/week5/jl009.Rmd
@@ -60,23 +60,24 @@ guest %>%
 
 ```{r}
 (guest_long <- guest %>% 
-  pivot_longer(cols      = FILL_THIS_IN, 
-               names_to  = FILL_THIS_IN,
-               FILL_THIS_IN))
+  pivot_longer(cols      = c(-party, -name), 
+               names_to  = c(".value", "event"), #meal to retain column status, event to value in new column
+               names_sep = "_"))
 ```
 
 2. Use `tidyr::separate()` to split the name into two columns: "first" and "last". Then, re-unite them with `tidyr::unite()`.
 
 ```{r}
 guest_long %>% 
-  separate(FILL_THIS_IN, into = FILL_THIS_IN)
+  separate(name, into = c("first", "last"), sep = " ") %>%
+  unite(col = "name", "first", "last", sep = " ")
   # unite(col = "name", FILL_THIS_IN, sep = FILL_THIS_IN)
 ```
 
 3. Which parties still have a "PENDING" status for all members and all events?
 
 ```{r}
-FILL_THIS_IN %>% 
+guest_long %>% 
   group_by(party) %>% 
   summarize(all_pending = all(attendance == "PENDING"))
 ```
@@ -84,9 +85,9 @@ FILL_THIS_IN %>%
 4. Which parties still have a "PENDING" status for all members for the wedding?
 
 ```{r}
-FILL_THIS_IN %>% 
+guest %>% 
   group_by(party) %>% 
-  summarize(pending_wedding = all(FILL_THIS_IN == "PENDING"))
+  summarize(pending_wedding = all(attendance_wedding == "PENDING"))
 ```
 
 
@@ -94,17 +95,17 @@ FILL_THIS_IN %>%
 
 ```{r}
 guest_long %>% 
-  pivot_wider(id_cols     = FILL_THIS_IN, 
-              names_from  = FILL_THIS_IN, 
+  pivot_wider(id_cols     = c(party, name), 
+              names_from  = c(event), 
               names_sep   = "_", 
-              values_from = FILL_THIS_IN)
+              values_from = meal)
 ```
 
 6. You also have a list of emails for each party, in this worksheet under the variable `email`. Change this so that each person gets their own row. Use `tidyr::separate_rows()`
 
 ```{r}
 email %>% 
-  separate_rows(FILL_THIS_IN, sep = FILL_THIS_IN)
+  separate_rows(guest, sep = ",")
 ```
 
 
