--- a/week5/jl010.Rmd
+++ b/week5/jl010.Rmd
@@ -20,7 +20,7 @@ Load required packages:
 ```{r, echo = FALSE, warning = FALSE, message = FALSE}
 library(tidyverse)
 library(singer)
-knitr::opts_chunk$set(fig.width=4, fig.height=3, warning = FALSE, fig.align = "center")
+#knitr::opts_chunk$set(fig.width=4, fig.height=3, warning = FALSE, fig.align = "center")
 ```
 
 <!---The following chunk allows errors when knitting--->
@@ -50,36 +50,36 @@ The package `singer` comes with two smallish data frames about songs. Let's take
 
 ```{r}
 time %>% 
-  FILL_THIS_IN(album, by = FILL_THIS_IN)
+  semi_join(album, by = c("song", "artist_name"))
 ```
 
 2. Go ahead and add the corresponding albums to the `time` tibble, being sure to preserve rows even if album info is not readily available.
 
 ```{r}
 time %>% 
-  FILL_THIS_IN(album, by = FILL_THIS_IN)
+  left_join(album, by = c("song", "artist_name")) #preserve everything from base tibble and adds extra info from another tibble if its available
 ```
 
 3. Which songs do we have "year", but not album info?
 
 ```{r}
 time %>% 
-  FILL_THIS_IN(album, by = "song")
+  semi_join(album, by = "song")
 ```
 
 4. Which artists are in `time`, but not in `album`?
 
 ```{r}
 time %>% 
-  anti_join(album, by = "FILL_THIS_IN")
+  anti_join(album, by = "artist_name") #subtracting out
 ```
 
 
 5. You've come across these two tibbles, and just wish all the info was available in one tibble. What would you do?
 
 ```{r}
-FILL_THIS_IN %>% 
-  FILL_THIS_IN(FILL_THIS_IN, by = "song")
+time %>% 
+  full_join(album, by = c("song", "artist_name"))
 ```
 
 
@@ -104,7 +104,7 @@ FILL_THIS_IN(fell, FILL_THIS_IN)
 ```{r}
 fell %>% 
   anti_join(ttow, by = "Race") %>% 
-  FILL_THIS_IN(FILL_THIS_IN, by = "Race")
+  anti_join(retk, by = "Race")
 ```
 
 
@@ -124,13 +124,13 @@ Let's use three set functions: `intersect`, `union` and `setdiff`. We'll work wi
 1. Rows that appear in both `y` and `z`
 
 ```{r}
-FILL_THIS_IN(y, z)
+intersect(y, z)
 ```
 
 2. You collected the data in `y` on Day 1, and `z` in Day 2. Make a data set to reflect that.
 
 ```{r}
-FILL_THIS_IN(
+bind_rows(
   mutate(y, day = "Day 1"),
   mutate(z, day = "Day 2")
 )
@@ -139,5 +139,6 @@ FILL_THIS_IN(
 3. The rows contained in `z` are bad! Remove those rows from `y`.
 
 ```{r}
-FILL_THIS_IN(FILL_THIS_IN, FILL_THIS_IN)
+setdiff(y, z)
+anti_join(y, z)
 ```
