--- a/week7/jl_14.Rmd
+++ b/week7/jl_14.Rmd
@@ -139,7 +139,7 @@ ggplot(gapminder, aes(gdpPercap, lifeExp)) +
 ```
 Lets consider another country "Zimbabwe", which has a unique behavior in the `lifeExp` and `year` relationship.
 ```{r}
-gapminder_Zimbabwe <- FILL_THIS_IN
+gapminder_Zimbabwe <- gapminder %>% filter(country == "Zimbabwe")
 gapminder_Zimbabwe %>% ggplot(aes(year, lifeExp)) + geom_point()
 ```
 Let's try fitting a linear model to this relationship
@@ -148,7 +148,9 @@ ggplot(gapminder_Zimbabwe, aes(year,lifeExp)) + geom_point()+geom_smooth(method 
 ```
 Now we will try to fit a second degree polynomial and see what would that look like.
 ```{r}
-ggplot(FILL_THIS_IN) + geom_point()+geom_smooth(FILL_THIS_IN)
+ggplot(gapminder_Zimbabwe, aes(year, lifeExp)) + 
+  geom_point()+
+  geom_smooth(method = "lm", formula = y ~ poly(I(x-1952), degree = 2))
 ```
 
 ```{r}
@@ -194,4 +196,6 @@ Let's make it easier to extract info, using the `broom` package. There are three
 Exercise: apply all three functions to our fitted model, `my_lm`. What do you see?
 
 ```{r}
+lm_residual <- augment(my_lm)
+ggplot(lm_residual, aes(.resid)) + geom_freqpoly(binwidth = 0.5)
 ```
